Archive2/cf/542694d1488843/output
In file included from /usr/local/include/c++/4.9.0/thread:39:0,
                 from main.cpp:21:
/usr/local/include/c++/4.9.0/functional: In instantiation of 'struct std::_Bind_simple<void (*())(std::vector<int>&)>':
/usr/local/include/c++/4.9.0/thread:137:47:   required from 'std::thread::thread(_Callable&&, _Args&& ...) [with _Callable = void (&)(std::vector<int>&); _Args = {}]'
main.cpp:62:46:   required from here
/usr/local/include/c++/4.9.0/functional:1665:61: error: no type named 'type' in 'class std::result_of<void (*())(std::vector<int>&)>'
       typedef typename result_of<_Callable(_Args...)>::type result_type;
                                                             ^
/usr/local/include/c++/4.9.0/functional:1695:9: error: no type named 'type' in 'class std::result_of<void (*())(std::vector<int>&)>'
         _M_invoke(_Index_tuple<_Indices...>)
         ^
